--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
     "d3": "https://esm.sh/d3@^7.9.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
